[project]
name = "comfyui_omost"
description = "Your image is almost there!"
version = "1.0.3"
license = "LICENSE"
dependencies = ["transformers>=4.41.1", "bitsandbytes>=0.43.1", "protobuf>=3.20", "torch", "openai", "requests"]

[project.urls]
Repository = "https://github.com/huchenlei/ComfyUI_omost"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "huchenlei"
DisplayName = "ComfyUI_omost"
Icon = ""
